--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="https://digipress.info/web-services/free-placeholder-services/">適当なダミー画像を出してくれるサイトの紹介</a></li>
     </ul>
     
-    <img src="http://p-hold.com/horse/600/400" alt="placeholder" />
+    <img src="http://p-hold.com/600/400" alt="placeholder" />
 
     <!-- SCRIPTS -->
     <!-- Example: <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
