入れ子のテスト

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
     
     <img src="https://picsum.photos/600/400" alt="placeholder" />
 
+    <h3>変更履歴</h3>
+    <ol>
+        <li>2023/04/23
+            <ul>
+                <li>はじめてつくった</li>
+                <li>VScodeで編集&コミットしてみる</li>
+                <li>ホームページが何故かREADME.mdのまま\nいつの間にかindex.htmlに変更されてた</li>
+            </ul>
+        </li>
+    </ol>
     <!-- SCRIPTS -->
     <!-- Example: <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 </body>
