--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="https://digipress.info/web-services/free-placeholder-services/">適当なダミー画像を出してくれるサイトの紹介</a></li>
     </ul>
     
-    <img src="https://picsum.photos/600/400" alt="placeholder" />
+    <img src="https://picsum.photos/600/400?random=1" alt="placeholder" />
 
     <h3>変更履歴</h3>
     <ol>
