--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="a test repository of website">
     <meta name="author" content="Isuzu-gawa">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="none">
     <link rel="stylesheet" href="">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
