地図を埋め込んでみたりいろいろ

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 
     <h1>GitHubでwebサイトつくってみた</h1>
     <p>内容はないようです</p>
+    <h2>備忘録</h2>
     <h3>参考にしたサイト</h3>
     <ul>
         <li><a href="https://docs.github.com/ja/pages/getting-started-with-github-pages/creating-a-github-pages-site">githubの公式チュートリアル</a></li>
         <li><a href="http://sixrevisions.com/html5/html5-template/">html5のテンプレート</a></li>
         <li><a href="https://digipress.info/web-services/free-placeholder-services/">適当なダミー画像を出してくれるサイトの紹介</a></li>
     </ul>
-    
-    <img src="https://picsum.photos/600/400?random=1" alt="placeholder" />
-
+    <br>
     <h3>変更履歴</h3>
     <ol>
         <li>2023/04/23
@@ -39,6 +38,16 @@
             </ul>
         </li>
     </ol>
+    <br>
+    <h2>コンテンツ</h2>
+    <div>
+        <p>画像をランダムに表示</p>
+        <img src="https://picsum.photos/600/400?random=1" alt="placeholder" />
+    </div>
+    <div>
+        <p>地図まわり</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1886.0966468610811!2d136.70981964300645!3d36.54974679821119!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8315fdcbd1509%3A0x43e1287af981542a!2z44CSOTIwLTExNjQg55-z5bed55yM6YeR5rKi5biC6KeS6ZaT55S6IOS6uumWk-ekvuS8mjTlj7fppKg!5e1!3m2!1sja!2sjp!4v1682222469573!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <!-- SCRIPTS -->
     <!-- Example: <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 </body>
