作業環境を整える

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
                 <li>はじめてつくった</li>
                 <li>VScodeで編集&コミットしてみる</li>
-                <li>ホームページが何故かREADME.mdのまま\nいつの間にかindex.htmlに変更されてた</li>
+                <li>ホームページが何故かREADME.mdのまま<br>いつの間にかindex.htmlに変更されてた</li>
             </ul>
         </li>
     </ol>
