とりあえずサイトを列挙

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <li><a href="https://docs.github.com/ja/pages/getting-started-with-github-pages/creating-a-github-pages-site">githubの公式チュートリアル</a></li>
         <li><a href="http://sixrevisions.com/html5/html5-template/">html5のテンプレート</a></li>
         <li><a href="https://digipress.info/web-services/free-placeholder-services/">適当なダミー画像を出してくれるサイトの紹介</a></li>
+        <li>gitまわり
+            <ul>
+                <li><a href="https://www.jaga.biz/linux/git-please-tell-me-who-you-are/">Git に Please tell me who you are と聞かれたとき</a></li>
+            </ul>
+        </li>
     </ul>
     <br>
     <h3>変更履歴</h3>
