--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <div>
         <p>画像をランダムに表示</p>
         <img src="https://picsum.photos/600/400?random=1" alt="placeholder" />
+        <p>ローカルの画像を表示</p>
+        <img src="./randimage.jpg" alt="placeholder" />
     </div>
     <div>
         <p>地図まわり</p>
