--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <li><a href="https://digipress.info/web-services/free-placeholder-services/">適当なダミー画像を出してくれるサイトの紹介</a></li>
         <li>gitまわり
             <ul>
+                <li><a href="https://investment.abbamboo.com/programming/google-colab-sample/">git&#9587;google colab</a></li>
+                <li><a href="https://qiita.com/mokio/items/f6c67c8f9af050383fc0">gitにアクセストークンを設定する話</a></li>
                 <li><a href="https://www.jaga.biz/linux/git-please-tell-me-who-you-are/">Git に Please tell me who you are と聞かれたとき</a></li>
             </ul>
         </li>
