--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <li>ホームページが何故かREADME.mdのまま<br>いつの間にかindex.htmlに変更されてた</li>
             </ul>
         </li>
+        <li>2023/04/24
+            <ul>
+                <li>GPSまわりをJSで確認</li>
+                <li>シェルかPythonで無理やり動的サイトから位置情報を拾うしかない？</li>
+            </ul>
+        </li>
     </ol>
     <br>
     <h2>コンテンツ</h2>
