--- a/getlocation/gps-json.html
+++ b/getlocation/gps-json.html
@@ -23,7 +23,8 @@
             handleError();
         }
     }
-    
+
     getGeoLocation();
+    resdiv.innerText = '位置情報を取得できません。';
 </script>
 <div id="resdiv">#NoData</div>
