--- a/getlocation/gps-json.html
+++ b/getlocation/gps-json.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    const resdiv = document.getElementById("resdiv")
+    const resdiv = document.getElementById("resdiv");
 
     function showMap(position) {
         /*位置情報を表示する*/
@@ -25,6 +25,5 @@
     }
 
     getGeoLocation();
-    resdiv.innerText = '位置情報を取得できません。';
 </script>
 <div id="resdiv">#NoData</div>
