--- a/getlocation/gps-json.html
+++ b/getlocation/gps-json.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    const resdiv = document.getElementById("resdiv");
+    var resdiv = document.getElementById("resdiv");
 
     function showMap(position) {
         /*位置情報を表示する*/
