--- a/getlocation/gps-json.html
+++ b/getlocation/gps-json.html
@@ -1,6 +1,6 @@
 <div id="resdiv">#NoData</div>
 <script type="text/javascript">
-    var resdiv = document.getElementById("resdiv"); // この書き方できないの?
+    var resdiv = document.getElementById("resdiv"); // この書き方できないの? -> 書く順番が悪かった?
 
     function showMap(position) {
         /*位置情報を表示する*/
@@ -39,6 +39,5 @@
         }
         return temp;
     }
-
     getGeoLocation();
 </script>
