--- a/getlocation/gps-json.html
+++ b/getlocation/gps-json.html
@@ -17,6 +17,11 @@
         document.getElementById("resdiv").innerText = '位置情報を取得できません。';
     }
 
+    function handleError2(error) {
+        /*取得失敗のアラートを表示する*/
+        document.getElementById("resdiv").innerText = '位置情報APIが存在しません';
+    }
+
     function getGeoLocation(){
         if (navigator.geolocation && typeof navigator.geolocation.getCurrentPosition == 'function') {
             /*位置情報を取得可能な場合*/
@@ -24,7 +29,7 @@
         }
         else {
             /*位置情報を取得不可能な場合*/
-            handleError();
+            handleError2();
         }
     }
 
