--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <li><a href="https://investment.abbamboo.com/programming/google-colab-sample/">git&#9587;google colab</a></li>
                 <li><a href="https://qiita.com/mokio/items/f6c67c8f9af050383fc0">gitにアクセストークンを設定する話</a></li>
                 <li><a href="https://www.jaga.biz/linux/git-please-tell-me-who-you-are/">Git に Please tell me who you are と聞かれたとき</a></li>
+                <li><a href="https://docs.github.com/ja/get-started/getting-started-with-git/managing-remote-repositories">リポジトリのSSH接続とかHTTPS接続とかの修正</a></li>
+                <li><a href="https://www.yo1000.com/git-delete-file/">機密ファイルを上げてしまったときに</a></li>
             </ul>
         </li>
         <li>位置情報まわり
