--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>画像をランダムに表示</p>
         <img src="https://picsum.photos/600/400?random=1" alt="placeholder" />
         <p>ローカルの画像を表示</p>
-        <img src="./randimage.png" alt="placeholder" />
+        <img src="https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/randimage.png" alt="placeholder" />
     </div>
     <div>
         <p>地図まわり</p>
