--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
     <div>
         <p>画像をランダムに表示</p>
         <img src="https://picsum.photos/600/400?random=1" alt="placeholder" />
-        <p>ローカルの画像を表示</p>
+        <p>webサーバーローカルの画像を表示</p>
+        <img src="./randimage.png" alt="placeholder" />
+        <p>Githubの画像を表示</p>
         <img src="https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/randimage.png" alt="placeholder" />
     </div>
     <div>
