地図できた?

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1886.0966468610811!2d136.70981964300645!3d36.54974679821119!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8315fdcbd1509%3A0x43e1287af981542a!2z44CSOTIwLTExNjQg55-z5bed55yM6YeR5rKi5biC6KeS6ZaT55S6IOS6uumWk-ekvuS8mjTlj7fppKg!5e1!3m2!1sja!2sjp!4v1682222469573!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>myMapにも埋め込み機能あり</p>
         <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1LVmY28Qdlr-vChV8YntgUoypT0Tsyjw8&ehbc=2E312F" width="640" height="480"></iframe>
+        <p>ローカルな地図</p>
+        <iframe src="./busloc_map.html" width="640" height="480"></iframe>
+        <p>rawから無理やり読み込み</p>
+        <iframe src="https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/index.html" width="640" height="480"></iframe>
     </div>
     <!-- SCRIPTS -->
     <!-- Example: <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
