--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p>ローカルな地図</p>
         <iframe src="./busloc_map.html" width="640" height="480"></iframe>
         <p>rawから無理やり読み込み</p>
-        <iframe src="https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/index.html" width="640" height="480"></iframe>
+        <iframe src="https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/busloc_map.html" width="640" height="480"></iframe>
     </div>
     <!-- SCRIPTS -->
     <!-- Example: <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
