--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <p>ローカルな地図</p>
         <iframe src="./busloc_map.html" width="640" height="480"></iframe>
         <p>rawから無理やり読み込み</p>
+        <p>流石にだめでした</p>
         <iframe src="https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/busloc_map.html" width="640" height="480"></iframe>
     </div>
     <!-- SCRIPTS -->
