--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
         <script type="module">
             // data.jsonをjson形式で読み込んで「data」という名前で使いまわす
             import data from "./data.json" assert { type: "json" };
-            console.log(data);
+            document.getElementById("container").innerText = data
         </script>
+
     </div>
     <!-- SCRIPTS -->
     <!-- Example: <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
