--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                 <li>シェルかPythonで無理やり動的サイトから位置情報を拾うしかない？</li>
             </ul>
         </li>
+        <li>2023/04/26
+            <ul>
+                <li>とりあえず地図を出力させるところまではできた</li>
+                <li>どうにかして座標だけ書き換えていく方式に切り替えたい</li>
+            </ul>
+        </li>
     </ol>
     <br>
     <h2>コンテンツ</h2>
