--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
     </div>
     <div>
         <h3>JavaScript</h3>
-        <div id="container"></div>
+        <div id="container">#読み込みできてない</div>
         <script type="module">
             // data.jsonをjson形式で読み込んで「data」という名前で使いまわす
             import data from "./data.json" assert { type: "json" };
             document.getElementById("container").innerText = JSON.stringify(data)
         </script>
-        <div id="container-cors"></div>
+        <div id="container-cors">#読み込みできてない</div>
         <script type="module">
             // data.jsonをjson形式で読み込んで「data」という名前で使いまわす
             import data2 from "https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/data.json" assert { type: "text/plain" };
