--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div id="container-cors">#読み込みできてない</div>
         <script type="module">
             // data.jsonをjson形式で読み込んで「data」という名前で使いまわす
-            import data2 from "https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/data.json" assert { type: "text/plain" };
+            import data2 from "https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/data.json";
             document.getElementById("container-cors").innerText = JSON.stringify(data2)
         </script>
         <p>なんかうまくうごかない</p>
