--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <h1>GitHubでwebサイトつくってみた</h1>
     <p>内容はないようです</p>
+    <h2>プロジェクトの場所</h2>
+    <p><a href="https://github.com/Isuzu-gawa/Isuzu-gawa.github.io">Githubへのリンク</a></p>
     <h2>備忘録</h2>
     <h3>参考にしたサイト</h3>
     <ul>
