--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             // fetch("https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/data.json")
             .then((response) => response.json())
             .then((data) => {
-                data2 = data
-                console.log(data);
+                data2 = data;
+                console.log(data2);
             });
 
             document.getElementById("container-cors").innerText = JSON.stringify(data2)
