--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </script>
         <div id="container-cors">#読み込みできてない</div>
         <script>
-            let data2 = {}
+            let data2 = {};
             fetch("./data.json")
             // fetch("https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/data.json")
             .then((response) => response.json())
