--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
     </div>
     <div>
         <h3>JavaScript</h3>
-        <div id="container">#読み込みできてない</div>
+        <div id="container">#local 読み込みできてない</div>
         <script type="module">
             // data.jsonをjson形式で読み込んで「data」という名前で使いまわす
             import data from "./data.json" assert { type: "json" };
             document.getElementById("container").innerText = JSON.stringify(data)
         </script>
-        <div id="container-cors">#読み込みできてない</div>
+        <div id="container-cors">#github 読み込みできてない</div>
+        <div id="container-google">#google drive 読み込みできてない</div>
         <script>
             // fetch の都合上、中に全部書くかまるっとasyncで囲んでawaitしないとfetch処理が終わる前に次に進んでしまう
             let data2 = {};
@@ -115,6 +116,13 @@
                 console.log(data2);
 
                 document.getElementById("container-cors").innerText = JSON.stringify(data2)
+            });
+
+            // fetch("./data.json")
+            fetch("https://drive.google.com/uc?id=1ii_u_OsPmfqmEeg05vK-53j_PkUtxSpS&export=download")
+            .then((response) => response.json())
+            .then((data) => {
+                document.getElementById("container-google").innerText = JSON.stringify(data)
             });
         </script>
         <p>なんかうまくうごかない</p>
