--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
                 <li>どうにかして座標だけ書き換えていく方式に切り替えたい</li>
             </ul>
         </li>
+        <li>2023/08/15
+            <ul>
+                <li>バスロケアプリを作ってしまったのでこちらは用済みに</li>
+                <li>とりあえずiframeで埋め込んで表示させられるかやってみる</li>
+            </ul>
+        </li>
     </ol>
     <br>
     <h2>コンテンツ</h2>
@@ -94,6 +100,8 @@
         <p>rawから無理やり読み込み</p>
         <p>流石にだめでした</p>
         <!-- <iframe src="https://raw.githubusercontent.com/Isuzu-gawa/Isuzu-gawa.github.io/main/busloc_map.html" width="640" height="480"></iframe> -->
+        <p>バスロケアプリ</p>
+        <iframe src="https://kutabus2023--20230805kuta-pfoce59w.web.app/nologin/kutabus01" width="640" height="480"></iframe>
     </div>
     <div>
         <h3>JavaScript</h3>
